--- a/themes/Kratos-Rebirth/layout/_partial/footer.ejs
+++ b/themes/Kratos-Rebirth/layout/_partial/footer.ejs
@@ -5,7 +5,7 @@
     </div>
 </div>
 <footer>
-    <div id="footer" <% if (theme.aplayer.enabled) { %> class="ap-lrc" <% } %> >
+    <div id="footer" style="padding-top:0px" <% if (theme.aplayer.enabled) { %> class="ap-lrc" <% } %> >
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 footer-list text-center">
