--- a/themes/Kratos-Rebirth/layout/_partial/footer.ejs
+++ b/themes/Kratos-Rebirth/layout/_partial/footer.ejs
@@ -34,17 +34,19 @@
                         <% } %>
                     </ul>
                     <ul class="kratos-copyright">
-                        <!-- <div>
-                            <li>&copy; <%- date(new Date(), 'YYYY') %> <%- config.title || config.author %> <%- __('copyright') %>.</li>
-                            <li><%- theme.timenotice %><span id="span_dt">Loading...</span></li>
-                        </div> -->
                         <div>
-                            <li>Theme <a href="https://github.com/Candinya/Kratos-Rebirth" target="_blank">Kratos:Rebirth</a></li>
-                            <li>Site built with&nbsp;<i class="fa fa-heart throb" style="color:#d43f57"></i>&nbsp;by <%- config.author %>.</li>
+                            <!-- <li>&copy; <%- date(new Date(), 'YYYY') %> <%- config.title || config.author %> <%- __('copyright') %>.</li> -->
+                            <!-- <li><%- theme.timenotice %><span id="span_dt">Loading...</span></li> -->
+                            <li><a href="https://www.pixiv.net/artworks/96396391" target="_blank" >Background </a>Create by <a href="https://www.pixiv.net/users/66221579" target="_blank">GIRYU</a></li>
                         </div>
                         <div>
+                            <li>Theme <a href="https://github.com/Candinya/Kratos-Rebirth" target="_blank">Kratos-Rebirth</a></li>
                             <li>Powered by <a href="https://hexo.io" target="_blank" rel="nofollow">Hexo</a></li>
-                            <% if (theme.hoster) {%><li>Hosted on <%- theme.hoster %></li><% } %>
+                            <!-- <li>Site built with&nbsp;<i class="fa fa-heart throb" style="color:#d43f57"></i>&nbsp;by <%- config.author %>.</li> -->
+                        </div>
+                        <div>
+                            <!-- <li>Powered by <a href="https://hexo.io" target="_blank" rel="nofollow">Hexo</a></li> -->
+                            <!-- <% if (theme.hoster) {%><li>Hosted on <%- theme.hoster %></li><% } %> -->
                         </div>
                         <div>
                             <% if (theme.icp) {%><li><a href="https://beian.miit.gov.cn" rel="external nofollow" target="_blank"><%- theme.icp %></a></li><% } %>
