修改字数统计样式

--- a/themes/Kratos-Rebirth/layout/post.ejs
+++ b/themes/Kratos-Rebirth/layout/post.ejs
@@ -20,7 +20,7 @@
                     <% if (wordsCount < 1500) { %>
                         <%= wordsCount %>
                     <% } else { %>
-                        ~<%= (wordsCount / 1000).toFixed(2) %>K
+                        约 <%= (wordsCount / 1000).toFixed(2) %>K
                     <% } %>
                     <%- __('words') %>
                 </li>
