去掉文章字数统计的'约'字

--- a/themes/Kratos-Rebirth/layout/post.ejs
+++ b/themes/Kratos-Rebirth/layout/post.ejs
@@ -20,7 +20,7 @@
                     <% if (wordsCount < 1500) { %>
                         <%= wordsCount %>
                     <% } else { %>
-                        约 <%= (wordsCount / 1000).toFixed(2) %>K
+                        <%= (wordsCount / 1000).toFixed(1) %>K
                     <% } %>
                     <%- __('words') %>
                 </li>
