--- a/themes/Kratos-Rebirth/layout/_pages/categories.ejs
+++ b/themes/Kratos-Rebirth/layout/_pages/categories.ejs
@@ -58,9 +58,9 @@
         <%- __('categories_list') %>
       </h2>
       <div style="margin-left: 2em;">
-        <h3 class="archive-page-counter">
+        <!-- <h3 class="archive-page-counter">
           <%- __('categories_count', site.categories.length ) %>
-        </h3>
+        </h3> -->
         <div class="categories">
           <% if (site.categories.length){ %>
             <%- list_categories({show_count: false}) %>
