--- a/themes/Kratos-Rebirth/layout/_widget/about.ejs
+++ b/themes/Kratos-Rebirth/layout/_widget/about.ejs
@@ -5,10 +5,13 @@
             <img class="about-photo" src="<%= theme.avatarUri %>" loading="lazy" decoding="auto" />
         </div>
     </div>
+    <div style="text-align: center;">
+        <h3>Korin</h3>
+    </div>
     <div class="textwidget">
         <p class="text-center"><%- config.description %></p>
     </div>
-    <div class="site-meta">
+    <!-- <div class="site-meta">
         <a class="meta-item" href="<%- url_for('/archives/') %>">
             <span class="title">
                 <%- __('post') %>
@@ -33,5 +36,5 @@
                 <%- site.tags.length %>
             </span>
         </a>
-    </div>
+    </div> -->
 </aside>
