--- a/themes/Kratos-Rebirth/layout/_partial/sidebar.ejs
+++ b/themes/Kratos-Rebirth/layout/_partial/sidebar.ejs
@@ -1,5 +1,10 @@
 <% const needSplit = theme.widgets.includes('splitter') && (is_post() || is_page()); %>
 <% const tocContent = toc(page.encrypt ? page.origin : page.content, { list_number: false }); %>
+<style>
+    a:hover{
+        color:#ccc;
+    }
+</style>
 <section id="kratos-widget-area" class="col-md-4 hidden-xs hidden-sm">
     <!-- 文章和页面根据splitter来分割，没有的话就从头开始设置为sticky -->
     <% if (!needSplit) { %>
