--- a/themes/Kratos-Rebirth/layout/_partial/footer.ejs
+++ b/themes/Kratos-Rebirth/layout/_partial/footer.ejs
@@ -56,18 +56,18 @@
         </div>
         <div class="kr-tool text-center">
             <div class="tool">
-                <!-- <% if (theme.search.enable) { %>
+                <% if (theme.search.enable) { %>
                     <div class="box search-box">
                         <a href="<%- config.root %>search/">
                             <span class="fa fa-search"></span>
                         </a>
                     </div>
-                <% } %> -->
-                <!-- <% if (theme.enable_dark) { %>
+                <% } %>
+                <% if (theme.enable_dark) { %>
                     <div class="box theme-box" id="darkmode-switch">
                         <span class="fa fa-adjust"></span>
                     </div>
-                <% } %> -->
+                <% } %>
                 <% if (theme.snow) { %>
                     <div class="box theme-box" id="snow-switch">
                         <span class="fa fa-snowflake-o"></span>
